# ostc-fpp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  did.jsonl
docs/: backup-restore.md  lkmv-config-data-structure.md  lkmv-tool-commands.md  managing-relationships.md  multiple-didweb-same-domain.md  ostc-config-data-structure.md  ostc-tool-commands.md  relationships-vrcs.md  secure-key-management.md  secured-configuration-management.md
lkm-service/: Cargo.toml  README.md
lkm-service/conf/: config.json-example
lkm-service/src/: config.rs  main.rs
lkmv/: Cargo.toml  README.md
lkmv-cli/: Cargo.toml
lkmv-cli/src/: cli.rs  config.rs  log.rs  main.rs  status.rs
lkmv-cli/src/config/: mod.rs  public_config.rs
lkmv-cli/src/contacts/: mod.rs
lkmv-cli/src/interactions/: vrc.rs
lkmv-cli/src/maintainers/: mod.rs
lkmv-cli/src/messaging/: mod.rs
lkmv-cli/src/openpgp_card/: mod.rs  write.rs
lkmv-cli/src/relationships/: inbound.rs  messages.rs  mod.rs
lkmv-cli/src/setup/: bip32_bip39.rs  did.rs  mod.rs  openpgp_card.rs  pgp_export.rs  pgp_import.rs
lkmv-cli/src/tasks/: clear.rs  fetch.rs  interact.rs  mod.rs
lkmv-cli2/: Cargo.toml
lkmv-cli2/examples/: glenn.rs
lkmv-cli2/src/: cli.rs  main.rs
lkmv-cli2/src/state_handler/: mod.rs  state.rs
lkmv-cli2/src/state_handler/actions/: mod.rs
lkmv-cli2/src/state_handler/main_page/: mod.rs
lkmv-cli2/src/state_handler/setup_page/: mod.rs
lkmv-cli2/src/state_handler/setup_sequence/: bip32.rs  config.rs  did_keys.rs  mod.rs  openpgp_card.rs
lkmv-cli2/src/ui/: component.rs  mod.rs
lkmv-cli2/src/ui/pages/: mod.rs  setup.rs
lkmv-cli2/src/ui/pages/main/: mod.rs
lkmv-cli2/src/ui/pages/main/components/: content_panel.rs  menu_panel.rs
lkmv-cli2/src/ui/pages/setup/: bip32_initialization.rs  choice.rs  import_backup.rs  mod.rs
lkmv-cli2/src/ui/pages/setup_flow/: bip32_ask.rs  bip32_import.rs  bip32_show.rs  config_import.rs  did_keys_ask.rs  did_keys_export_ask.rs  did_keys_export_inputs.rs  did_keys_export_show.rs  did_keys_show.rs  final_page.rs  mediator_ask.rs  mediator_custom.rs  mod.rs  start_ask.rs  unlock_code_ask.rs  unlock_code_set.rs  unlock_code_warn.rs  username.rs  webvh_address.rs  webvh_address_import.rs
lkmv-cli2/src/ui/pages/setup_flow/pgp_token/: token_factory_reset.rs  token_select.rs  token_set_cardholder_name.rs  token_start.rs  (+1 more)
lkmv/src/: bip32.rs  colors.rs  errors.rs  lib.rs  main.rs  maintainers.rs  relationships.rs  status.rs  tasks.rs  vrc.rs
lkmv/src/config/: did.rs  mod.rs  private_config.rs  protected_config.rs  public_config.rs  secured_config.rs
lkmv/src/openpgp_card/: crypt.rs  mod.rs
lkmv/src/relationships/: messages.rs  mod.rs
lkmv/src/setup/: did.rs
lkmv/src/tasks/: fetch.rs  interact.rs  mod.rs
openvtc-cli/src/: config.rs
openvtc-cli/src/relationships/: mod.rs
openvtc-cli/src/setup/: mod.rs
openvtc-cli2/: Cargo.toml
openvtc-cli2/src/: main.rs
openvtc-cli2/src/state_handler/: mod.rs
openvtc-cli2/src/state_handler/actions/: mod.rs
openvtc-cli2/src/state_handler/setup_sequence/: config.rs  did_keys.rs  mod.rs  vta.rs
openvtc-cli2/src/ui/pages/main/: mod.rs
openvtc-cli2/src/ui/pages/setup_flow/: bip32_ask.rs  bip32_import.rs  bip32_show.rs  did_keys_show.rs  mediator_ask.rs  mod.rs  start_ask.rs  vta_credential.rs  webvh_address.rs
openvtc-lib/: Cargo.toml
openvtc-lib/src/: relationships.rs
openvtc-lib/src/config/: did.rs  mod.rs  protected_config.rs  secured_config.rs
ostc-cli/: Cargo.toml  export.ostc
ostc-cli/src/: cli.rs  config.rs  log.rs  main.rs  status.rs
ostc-cli/src/contacts/: mod.rs
ostc-cli/src/interactions/: vrc.rs
ostc-cli/src/maintainers/: mod.rs
ostc-cli/src/messaging/: mod.rs
ostc-cli/src/openpgp_card/: mod.rs  write.rs
ostc-cli/src/relationships/: inbound.rs  messages.rs  mod.rs
ostc-cli/src/setup/: did.rs  mod.rs  openpgp_card.rs  pgp_export.rs  pgp_import.rs
ostc-cli/src/tasks/: clear.rs  fetch.rs  interact.rs  mod.rs
ostc-cli2/: Cargo.toml  export.ostc
ostc-cli2/src/: cli.rs  main.rs
ostc-cli2/src/state_handler/: mod.rs  state.rs
ostc-cli2/src/state_handler/actions/: mod.rs
ostc-cli2/src/state_handler/main_page/: mod.rs
ostc-cli2/src/state_handler/setup_sequence/: config.rs  did_keys.rs  mod.rs  openpgp_card.rs
ostc-cli2/src/ui/pages/main/: mod.rs
ostc-cli2/src/ui/pages/setup_flow/: bip32_ask.rs  bip32_import.rs  bip32_show.rs  config_import.rs  did_keys_export_ask.rs  did_keys_export_inputs.rs  did_keys_export_show.rs  did_keys_show.rs  final_page.rs  mediator_ask.rs  mediator_custom.rs  mod.rs  start_ask.rs  unlock_code_ask.rs  unlock_code_set.rs  unlock_code_warn.rs  username.rs  webvh_address.rs
ostc-lib/: Cargo.toml  README.md
ostc-lib/src/: bip32.rs  errors.rs  lib.rs  maintainers.rs  relationships.rs  tasks.rs  vrc.rs
ostc-lib/src/config/: did.rs  mod.rs  protected_config.rs  public_config.rs  secured_config.rs
ostc-lib/src/openpgp_card/: crypt.rs  mod.rs
ostc-service/: Cargo.toml
ostc-service/conf/: config.json-example
ostc-service/src/: config.rs  main.rs
robotic-maintainers/: Cargo.toml  README.md
robotic-maintainers/src/: main.rs
src/: cli.rs  config.rs  gg_test.rs  log.rs  main.rs  status.rs  vrc.rs
src/config/: mod.rs  private_config.rs  public_config.rs  secured_config.rs
src/contacts/: mod.rs
src/messaging/: mod.rs
src/openpgp_card/: crypt.rs  mod.rs  ui.rs  write.rs
src/relationships/: inbound.rs  messages.rs  mod.rs  request.rs
src/setup/: bip32_bip39.rs  did.rs  mod.rs  openpgp_card.rs  pgp_export.rs  pgp_import.rs
src/tasks/: clear.rs  fetch.rs  interact.rs  mod.rs
src/vrc/: interact.rs  remove.rs  request.rs  visual.rs
(+8 files in other folders)
