[package]
name = "lkmv"
description = "Linux Kernel Maintainer Verification CLI Tool"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.88.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FirstPersonNetwork/lkmv"

[features]
default = ["openpgp-card"]
openpgp-card = ["dep:openpgp-card"]

[dependencies]
affinidi-tdk = "0.2"
anyhow = "1.0"
bip39 = "2.2.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = { version = "0.12", features = ["password"] }
ed25519-dalek-bip32 = "0.3"
keyring = "3.6"
pgp = "0.17"
rand = "0.9"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1.8"

# Openpgp-Card Support
openpgp-card = { version = "0.5", optional = true }
