[package]
name = "lkmv"
description = "Linux Kernel Maintainer Verification CLI Tool"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.88.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FirstPersonNetwork/lkmv"

[features]
default = ["openpgp-card"]
openpgp-card = [
  "dep:openpgp-card",
  "dep:card-backend-pcsc",
  "dep:openpgp-card-rpgp",
]

[dependencies]
aes-gcm = "0.10"
affinidi-tdk = "0.2"
affinidi-data-integrity = "0.3"
anyhow = "1.0"
base64 = "0.22"
bip39 = "2.2.0"
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
crossterm = "0.29"
dirs = "6.0"
dialoguer = { version = "0.12", features = ["password"] }
didwebvh-rs = "0.1"
ed25519-dalek-bip32 = "0.3"
hex = "0.4"
keyring = "3.6"
multibase = "0.9"
pgp = "0.18"
# This is locked 0.8 due to *-dalek crates not udpated to rand 0.9
rand = "0.8"
regex = "1.12"
# this is locked to 0.8.x as openpgp-card is only using 0.8 in it's interfaces - checked 0.5.1 version
secrecy = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.37"
tokio = "1.48"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.8"

# Openpgp-Card Support
openpgp-card = { version = "0.5", optional = true }
card-backend-pcsc = { version = "0.5", optional = true }
openpgp-card-rpgp = { version = "0.6", optional = true }
