[workspace]
members = [
  "lkmv",
  "lkmv-cli",
  "robotic-maintainers",
  "lkm-service",
  "lkmv-cli2",
]
resolver = "3"

[workspace.package]
description = "Linux Kernel Maintainer Verification"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.88.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FirstPersonNetwork/lkmv-rs"

[workspace.dependencies]
lkmv = { version = "0.1.0", path = "lkmv", default-features = false }

# Decentralized Trust Graph Credentials
# NOTE: When this is published, switch from git to crates.io
dtg-credentials = { version = "0.1", git = "https://github.com/FirstPersonNetwork/dtg-credentials-rs" }

aes-gcm = "0.10"
affinidi-tdk = "0.3"
affinidi-data-integrity = "0.3"
anyhow = "1.0"
base64 = "0.22"
bip39 = "2.2"
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cli-clipboard = "0.4"
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0"
dialoguer = { version = "0.12", features = ["password"] }
didwebvh-rs = "0.1"
ed25519-dalek-bip32 = "0.3"
hex = "0.4"
keyring = "3.6"
multibase = "0.9"
pgp = "0.18"
# This is locked 0.8 due to *-dalek crates not udpated to rand 0.9
rand = "0.8"
ratatui = "0.30"
regex = "1.12"
# this is locked to 0.8.x as openpgp-card is only using 0.8 in it's interfaces - checked 0.5.1 version
secrecy = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
strum = "0.27"
strum_macros = "0.27"
sysinfo = "0.37"
thiserror = "2.0"
tokio = "1.49"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.15"
url = "2.5"
uuid = { version = "1.19", features = ["v4", "fast-rng"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.8"

# Openpgp-Card Support
openpgp-card = "0.5"
card-backend-pcsc = "0.5"
openpgp-card-rpgp = "0.6"
